Feat: Images added

--- a/pages/search.html
+++ b/pages/search.html
@@ -1,8 +1,8 @@
 ---
 layout: search
-title: Search
+title: Zoeken
 permalink: /search/
-subtitle: "What are you looking for?"
+subtitle: "Waar ben je naar op zoek?"
 feature-img: "assets/img/pexels/search-map.jpeg"
 hide: true
 ---
